Fixed occurences of text overflow and low contrast text

--- a/src/Components/ChatTable.css
+++ b/src/Components/ChatTable.css
@@ -1,10 +1,4 @@
 table.chat {
-  td.duration {
-    width: 80px;
-    text-align: right;
-    color: var(--text-secondary);
-  }
-
   td.user {
     white-space: nowrap;
     vertical-align: top;
@@ -13,4 +7,15 @@ table.chat {
     text-align: right;
     border-right: 1px solid #ccc
   }
+
+  td.message {
+    word-break: break-all;
+  }
+
+  td.duration {
+    width: 80px;
+    text-align: right;
+    color: var(--text-secondary);
+  }
+  
 }
